syntax = "proto3";

package user;
option go_package = "./proto/user;user";

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  int32 code = 1;
  string message = 2;
  string user_id = 3;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
}